Added MappingProfiles class as AutoMapper configuration for Auction DTOs

--- a/src/AuctionService/AuctionService.csproj
+++ b/src/AuctionService/AuctionService.csproj
@@ -11,6 +11,7 @@
     <Folder Include="Data\" />
     <Folder Include="DTOs\" />
     <Folder Include="Entities\" />
+    <Folder Include="RequestHelpers\" />
   </ItemGroup>
 
   <ItemGroup>
