--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
+    <Folder Include="RequestHelpers\" />
   </ItemGroup>
 
 </Project>
