--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -16,6 +16,7 @@
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="RequestHelpers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
